# SPDX-FileCopyrightText: 2021 Project CHIP Authors
#
# SPDX-License-Identifier: Apache-2.0

declare_args() {
  # Root directory for psoc6 SDK build files.
  psoc6_sdk_build_root = "//third_party/infineon/psoc6"
}

declare_args() {
  # Root directory for psoc6 SDK sources.
  psoc6_sdk_root = "${psoc6_sdk_build_root}/psoc6_sdk"
}
