# SPDX-FileCopyrightText: 2021 Project CHIP Authors
#
# SPDX-License-Identifier: Apache-2.0

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

import("//build_overrides/pigweed.gni")
import("$dir_pw_build/python_dist.gni")

# This target creates a single Python package and wheel for yamltests. It will
# merge all Python dependencies Matter. The output is located in:
#   out/obj/matter_yamltests_distribution/  <- source files here
#   out/obj/matter_yamltests_distribution._build_wheel/matter_yamltests-0.0.1-py3-none-any.whl
pw_python_distribution("matter_yamltests_distribution") {
  packages = [ "${chip_root}/scripts/py_matter_yamltests:matter_yamltests" ]
  generate_setup_cfg = {
    name = "matter_yamltests"
    version = "0.0.1"
    include_default_pyproject_file = true
    append_date_to_version = true
  }
}
