# Copyright (c) 2026 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# These settings are passed to an initial `gn args` pass used by the
# configure script to discover available build arguments. Because this
# actually executes all the GN files (including exec_script calls to
# things like pkg-config), we need to pass some non-default settings to
# avoid external dependencies that can cause GN to fail.

chip_crypto = "platform"
chip_mdns = "none"
