# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

shared_library("chip") {
  output_name = "chip"
  output_dir = "${target_out_dir}"
  include_dirs = [
    ".",

    # TODO: from `python3-config --includes`
    "/usr/include/python3.9",
  ]
  ldflags = [
    # TODO: from `python3-config --ldflags`
    "-L/usr/lib/python3.9/config-3.9-x86_64-linux-gnu",
  ]
  libs = [ "python3.9" ]

  sources = [
    "CommissionerInitParams.cpp",
    "CommissionerInitParams.h",
    "Converter.cpp",
    "Converter.h",
    "DeviceCommissioner.cpp",
    "DeviceCommissioner.h",
    "Module.cpp",
    "PersistentStorage.cpp",
    "PersistentStorage.h",
    "PythonGil.h",
    "PythonType.h",
    "RendezvousParameters.cpp",
    "RendezvousParameters.h",
    "TransportType.cpp",
    "TransportType.h",
  ]

  public_deps = [
    "${chip_root}/src/app",
    "${chip_root}/src/controller",
    "${chip_root}/src/controller/data_model",
    "${chip_root}/src/lib",
    "${chip_root}/src/lib/core",
    "${chip_root}/src/lib/mdns",
    "${chip_root}/src/lib/support",
    "${chip_root}/src/platform",
    "${chip_root}/src/setup_payload",
    "${chip_root}/src/transport",

    #"${chip_root}/third_party/pybind11",
  ]
}
