# SPDX-FileCopyrightText: 2020 Project CHIP Authors
#
# SPDX-License-Identifier: Apache-2.0

# Options from standalone-chip.mk that differ from configure defaults. These
# options are used from examples/.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

import("${chip_root}/build/chip/tests.gni")

declare_args() {
  chip_build_pw_rpc_lib = false
}

group("ameba") {
  deps = [ "${chip_root}/src/lib" ]

  if (chip_build_pw_rpc_lib) {
    deps += [ "//lib/pw_rpc" ]
  }

  if (chip_build_tests) {
    deps += [ "${chip_root}/src:tests" ]
  }
}
